WP-8611 voices details page related section alignment issue fixes

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -905,7 +905,6 @@
 }
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-related-programs-wrapper .field-related-programs {
   border-bottom: 1px solid lightgray;
-  padding: 15px 26px;
 }
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-related-programs-wrapper .field-related-programs .view-mode-idea_story_related {
   padding: 18px 26px 10px 26px;
